--- a/src/app/multi-line-chart/multi-line-chart.component.scss
+++ b/src/app/multi-line-chart/multi-line-chart.component.scss
@@ -6,6 +6,10 @@
   cursor: pointer;
 }
 
+span {
+  caret-color: transparent
+}
+
 @mixin tooltip-base {
   display: inline-block;
   position: absolute;
