--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-  <multi-line-chart [variableWidth]="600" [xTooltipLabel]="'Year'" [yTooltipLabel]="'Value'" [yAxisLabel]="'Some Value'" [data]="graphData" [xProp]="'year'" [yProp]="'value'"></multi-line-chart>
+  <multi-line-chart [variableWidth]="600" [xTooltipLabel]="'Year'" [yTooltipLabel]="'Value'" [yAxisLabel]="YLabel" [data]="graphData" [xProp]="'year'" [yProp]="'value'"></multi-line-chart>
 </div>
